fixed comments with overflow hidden so text didnt go under image

--- a/app/assets/stylesheets/comments.scss
+++ b/app/assets/stylesheets/comments.scss
@@ -18,11 +18,13 @@
   .panel-comment {
     img {
       float:left;
-      clear: both;
       margin-right: 8px;
     }
     .panel-comment-text {
-
+      overflow:hidden;
+      p {
+        margin-bottom: 0;
+      }
     }
   }
 
